@@ -20,7 +20,7 @@
 
 #define BUILD_DLL
 
-#include "util/function.h"
+#include "object_model/function.h"
 #include "object_model/block_model.h"
 #include "object_model/librarian.h"
 #include "object_model/plf.h"
