@@ -36,7 +36,7 @@
 #include "object_model/frame_submodel.h"
 #include "object_model/frame_model.h"
 #include "util/filepos.h"
-#include "util/function.h"
+#include "object_model/function.h"
 #include <sstream>
 #include <fstream>
 #include <memory>
